--- a/public/index.css
+++ b/public/index.css
@@ -16,13 +16,6 @@ body {
   }
 }
 
-@media screen and (max-width: 768px) {
-  .section-inner,
-  .header-inner {
-    max-width: 96%;
-  }
-}
-
 header {
   padding: 5px 0;
   background: rgb(227,222,209);
@@ -78,6 +71,21 @@ section {
 
 .cover {
   width: 250px;
+}
+
+@media screen and (max-width: 768px) {
+  .section-inner,
+  .header-inner {
+    max-width: 96%;
+  }
+
+  nav ul {
+    margin: 30px 0;
+  }
+
+  nav li {
+    padding: 0 20px
+  }
 }
 
 .highlight {
@@ -422,4 +430,12 @@ button {
     width: calc(100% - 115px);
     margin-right: 0;
   }
+  
+  .TableCell:first-child {
+    padding-left: 5px;
+  }
+}
+
+.note {
+  margin-top: 10px;
 }
